--- a/scripts/analyze_host_fold_changes.Rmd
+++ b/scripts/analyze_host_fold_changes.Rmd
@@ -1,282 +1,163 @@
 ---
-title: "Analyze host called start sites"
+title: "Determine list of induced genes under various treatments"
 author: "`r Sys.info()[['user']]`"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   github_document:
     toc: yes
-  html_document:
-    df_print: paged
-    toc: yes
-  pdf_document:
-    toc: yes
 ---
+
+We look for genes that are induced across both Ribo-seq and RNA-seq samples.
+Therefore, we treat these two measurements for each treatment as replicates.
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = F, message = F)
 ```
 
-## Import libraries
+# Import libraries and define analysis specific variables
 ```{r}
-library(Biostrings)
-library(GenomicRanges)
-library(GenomicFeatures)
-library(BSgenome)
-library(broom)
-library(biobroom)
-library(glue)
-library(stringr)
-library(grid)
-library(plyranges)
+library(DESeq2)
 library(tidyverse)
-library(rasilabRtemplates)
 
-sample_names <- c(
-  "vir" = "+vir",
-  "ifn_vir" = "+ifn +vir",
-  "untr" = "ctrl",
-  "ifn" = "+ifn"
-)
-
-treatment_names <- c(
-  "cyclo" = "ribo",
-  "ltm" = "ribo + LTM",
-  "mrna" = "mRNA"
-)
-# use this order to resolve multiple TIS within the same 5nt window
-tis_priority <- seq(11)
-names(tis_priority) <- c("ATG", "CTG", "TTG", "GTG", "ATA", "ATC", "ATT",
-                     "AAG", "ACG", "AGG", "other")
-
-# only genes that have these many counts across all samples
-count_threshold_for_deseq2 <- 100
-# set the lowest counts to be these for DESeq2 fold-changes
+# set the lowest counts to be these for DESeq2 fold-changes if it is zero
 deseq2_floor <- 1
 ```
 
-## Read hg38 genome and Gencode annotations
-```{r}
-genome <- BSgenome.Hsapiens.UCSC.hg38::BSgenome.Hsapiens.UCSC.hg38
-annotations <- glue("/fh/fast/subramaniam_a/db/rasi/genomes/human/hg38/gencode/annotations/gencode.v24.annotation.gff3.gz")
-annotations <- rtracklayer::import.gff3(annotations)
-```
+# Read gene annotations
 
-## Extract gene annotations 
-```{r, message=F}
-gene_annotations <- annotations %>% 
-  filter(type == "gene") %>% 
-  tidy() %>% 
+Select only genes that have annotated protein coding sequences in the CCDS 
+database.
+```{r}
+gene_annotations <- read_tsv(glue::glue("ftp://ftp.ebi.ac.uk/pub/databases/",
+  "genenames/new/tsv/locus_groups/protein-coding_gene.txt")) %>%
+  filter(!is.na(ccds_id)) %>%
+  select(ensembl_gene_id, symbol) %>%
+  rename(gene_id = ensembl_gene_id) %>% 
   print()
 ```
 
-## Read in gene counts and convert it to col
+# Read in gene counts and process it for input to DESeq2
+
+Exclude Ribo-seq  + LTM data for fold-change calculation
+
 ```{r}
 counts <- list.files("../processeddata/", pattern = "gencode.genes.results",
                           recursive = T,
                           full.names = T) %>% 
   enframe("sno", "file") %>% 
+  # exclude LTM data
+  filter(!str_detect(file, "ltm")) %>% 
+  # get sample name
   mutate(sample = str_extract(file, "[^/]+(?=/gencode.genes.results)")) %>% 
+  # read data in
   mutate(data = map(file, data.table::fread)) %>% 
   unnest(data) %>% 
+  # remove unwanted columns
   select(-sno, -file, -length, -effective_length, -TPM, -FPKM, -`transcript_id(s)`) %>% 
   mutate(expected_count = as.integer(expected_count)) %>% 
+  # first select only gene, sample pairs with non-zero counts
   filter(expected_count > 0) %>% 
+  # next create all sample-gene pairs filling with deseq2_floor if it doesn't exist
   complete(sample, gene_id, fill = list("expected_count" = deseq2_floor)) %>% 
-  group_by(sample) %>% 
-  mutate(sumcount = sum(expected_count)) %>% 
+  # select only rows that have a minimum of 100 counts across all samples
+  group_by(gene_id) %>% 
+  mutate(total_counts = sum(expected_count)) %>% 
   ungroup() %>% 
-  filter(sumcount > count_threshold_for_deseq2) %>% 
-  select(-sumcount)
+  filter(total_counts > 100) %>% 
+  select(-total_counts)
 
 gene_counts <- counts %>% 
+  # create one column per sample
   spread(sample, expected_count) %>% 
+  # remove gene id suffix to match with gene_name
+  mutate(gene_id = str_extract(gene_id, "\\w+"))
+
+print(gene_counts)
+
+gene_counts <- gene_counts %>% 
   as.data.frame() %>% 
   column_to_rownames("gene_id")
-
-head(gene_counts)
 ```
 
-## Run DESeq2 to get log fold changes
+# Run DESeq2 to get log fold changes
+
+Treat Ribo and mRNA as replicates to get non-zero P-values
 ```{r}
 coldata <- colnames(gene_counts) %>% 
   enframe("sno", "sample") %>% 
+  mutate(treatment = str_extract(sample, "(?<=mrna_|cyclo_).+$")) %>% 
+  mutate(type = str_extract(sample, "^(mrna|cyclo)")) %>% 
   mutate(colname = sample) %>% 
   as.data.frame() %>% 
   column_to_rownames("colname") %>% 
-  select(-sno)
+  select(-sno) %>% 
+  print()
 
-ddsObject <- DESeq2::DESeqDataSetFromMatrix(countData = gene_counts,
-                                            colData = coldata, design = ~ sample)
+ddsObject <- DESeqDataSetFromMatrix(countData = gene_counts,
+                                    colData = coldata,
+                                    design = ~ treatment)
 
-dds <- DESeq2::DESeq(ddsObject)
+dds <- DESeq(ddsObject)
 ```
 
-## Get fold-changes between specific sample pairs
+# Get fold-changes between specific sample pairs
 
-The sample pairs were created manually in `../annotations/samplepairs_for_deseq2.org`
-and exported to `../annotations/samplepairs_for_deseq2.tsv`
+The sample pairs were created manually in `../tables/samplepairs_for_deseq2.tsv`.
 
 ```{r}
-lfc <- read_tsv("../annotations/samplepairs_for_deseq2.tsv") %>% 
-  mutate(deseq_results = map2(sample1, sample2, function(x, y) 
-    DESeq2::results(dds, contrast = c("sample", x, y)))) %>%
-  mutate(lfc = map(deseq_results, function(res) 
-    res['log2FoldChange'] %>% as.data.frame() %>% rownames_to_column("gene_id"))) %>% 
-  select(-deseq_results) %>% 
-  unnest() %>% 
-  left_join(counts, by = c("sample1" = "sample", "gene_id")) %>% 
-  rename(count1 = expected_count) %>% 
-  left_join(counts, by = c("sample2" = "sample", "gene_id")) %>% 
-  rename(count2 = expected_count) %>% 
+lfc <- read_tsv("../tables/samplepairs_for_deseq2.tsv") %>% 
+  mutate(deseq_results = map2(treatment1, treatment2, function(x, y) 
+    results(dds, contrast = c("treatment", x, y)))) %>%
+  mutate(lfc = map(deseq_results, function(res)
+    res %>% as.data.frame() %>% rownames_to_column("gene_id"))) %>%
+  select(-deseq_results) %>%
+  unnest() %>%
   print()
 ```
 
-## Get list of inferferon-induced genes (Ribo)
+# Get list of inferferon-induced genes
+
+We treat Ribo and mRNA as replicates
 ```{r}
 lfc %>% 
-  filter(str_detect(sample1, "(cyclo|mrna)_ifn$") & 
-           str_detect(sample2, "(cyclo|mrna)_untr")) %>% 
-  mutate(treatment = str_extract(sample1, "mrna|cyclo|ltm")) %>% 
-  mutate(sample1 = str_extract(sample1, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  mutate(sample2 = str_extract(sample2, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  left_join(gene_annotations %>% select(gene_id, gene_name, gene_type)) %>% 
-  filter(gene_type == "protein_coding") %>% 
+  filter(treatment1 == "ifn") %>% 
+  left_join(gene_annotations) %>% 
   rename(lfc = log2FoldChange) %>% 
-  select(-gene_id, -gene_type) %>% 
-  gather(qty, value, matches("lfc|count1|count2")) %>% 
-  unite(qty, treatment, qty) %>% 
-  # get rid of second copy of genes present in both x and y
-  group_by(sample1, sample2, qty, gene_name) %>% 
-  slice(1) %>% 
-  ungroup() %>% 
-  spread(qty, value) %>%
-  # include only genes with > threshold counts across these subst conditions
-  filter(rowSums(select(., matches("count(1|2)$"))) > count_threshold_for_deseq2) %>% 
-  arrange(desc(cyclo_lfc)) %>% 
+  select(-stat, -lfcSE, -padj) %>% 
+  filter(pvalue < 0.001 & lfc >= log2(2)) %>%
+  arrange(pvalue) %>% 
   write_tsv("../tables/interferon_induced_genes.tsv") %>% 
   print()
 ```
 
-## Get list of virus-induced genes (Ribo)
+# Get list of virus-induced genes 
+
+We treat Ribo and mRNA as replicates
+
 ```{r}
 lfc %>% 
-  filter(str_detect(sample1, "(cyclo|mrna)_vir$") & 
-           str_detect(sample2, "(cyclo|mrna)_untr")) %>% 
-  mutate(treatment = str_extract(sample1, "mrna|cyclo|ltm")) %>% 
-  mutate(sample1 = str_extract(sample1, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  mutate(sample2 = str_extract(sample2, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  left_join(gene_annotations %>% select(gene_id, gene_name, gene_type)) %>% 
-  filter(gene_type == "protein_coding") %>% 
+  filter(treatment1 == "vir") %>% 
+  left_join(gene_annotations) %>% 
   rename(lfc = log2FoldChange) %>% 
-  select(-gene_id, -gene_type) %>% 
-  gather(qty, value, matches("lfc|count1|count2")) %>% 
-  unite(qty, treatment, qty) %>% 
-  # get rid of second copy of genes present in both x and y
-  group_by(sample1, sample2, qty, gene_name) %>% 
-  slice(1) %>% 
-  ungroup() %>% 
-  spread(qty, value) %>%
-  # include only genes with > threshold counts across these subst conditions
-  filter(rowSums(select(., matches("count(1|2)$"))) > count_threshold_for_deseq2) %>% 
-  arrange(desc(cyclo_lfc)) %>% 
+  select(-stat, -lfcSE, -padj) %>% 
+  filter(pvalue < 0.001 & lfc >= log2(2)) %>%
+  arrange(pvalue) %>% 
   write_tsv("../tables/virus_induced_genes.tsv") %>% 
   print()
 ```
 
-## Get list of inferferon + virus induced genes (Ribo)
+# Get list of inferferon + virus induced genes
+
+We treat Ribo and mRNA as replicates
+
 ```{r}
 lfc %>% 
-  filter(str_detect(sample1, "(cyclo|mrna)_ifn_vir$") & 
-           str_detect(sample2, "(cyclo|mrna)_untr")) %>% 
-  mutate(treatment = str_extract(sample1, "mrna|cyclo|ltm")) %>% 
-  mutate(sample1 = str_extract(sample1, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  mutate(sample2 = str_extract(sample2, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  left_join(gene_annotations %>% select(gene_id, gene_name, gene_type)) %>% 
-  filter(gene_type == "protein_coding") %>% 
+  filter(treatment1 == "ifn_vir") %>% 
+  left_join(gene_annotations) %>% 
   rename(lfc = log2FoldChange) %>% 
-  select(-gene_id, -gene_type) %>% 
-  gather(qty, value, matches("lfc|count1|count2")) %>% 
-  unite(qty, treatment, qty) %>% 
-  # get rid of second copy of genes present in both x and y
-  group_by(sample1, sample2, qty, gene_name) %>% 
-  slice(1) %>% 
-  ungroup() %>% 
-  spread(qty, value) %>%
-  # include only genes with > threshold counts across these subst conditions
-  filter(rowSums(select(., matches("count(1|2)$"))) > count_threshold_for_deseq2) %>% 
-  arrange(desc(cyclo_lfc)) %>% 
+  select(-stat, -lfcSE, -padj) %>% 
+  filter(pvalue < 0.001 & lfc >= log2(2)) %>%
+  arrange(pvalue) %>% 
   write_tsv("../tables/interferon_plus_virus_induced_genes.tsv") %>% 
-  print()
-```
-
-## Genes with largest TE difference between interferon and untreated conditions
-```{r}
-lfc %>% 
-  filter(str_detect(sample1, "cyclo_(ifn|untr)$") & 
-           str_detect(sample2, "mrna_(ifn|untr)$")) %>% 
-  mutate(sample = str_extract(sample1, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  left_join(gene_annotations %>% select(gene_id, gene_name, gene_type)) %>% 
-  filter(gene_type == "protein_coding") %>% 
-  rename(te = log2FoldChange) %>% 
-  select(-gene_id, -gene_type, -sample1, -sample2) %>% 
-  gather(qty, value, matches("te|count1|count2")) %>% 
-  unite(qty, sample, qty) %>% 
-  # get rid of second copy of genes present in both x and y
-  group_by(qty, gene_name) %>% 
-  slice(1) %>% 
-  ungroup() %>% 
-  spread(qty, value) %>%
-  # include only genes with > threshold counts across these subst conditions
-  filter(rowSums(select(., matches("count(1|2)$"))) > count_threshold_for_deseq2) %>% 
-  arrange(desc(ifn_te - untr_te)) %>%
-  write_tsv("../tables/interferon_treatment_te_change.tsv") %>% 
-  print()
-```
-
-## Genes with largest TE difference between virus and untreated conditions
-```{r}
-lfc %>% 
-  filter(str_detect(sample1, "cyclo_(vir|untr)$") & 
-           str_detect(sample2, "mrna_(vir|untr)$")) %>% 
-  mutate(sample = str_extract(sample1, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  left_join(gene_annotations %>% select(gene_id, gene_name, gene_type)) %>% 
-  filter(gene_type == "protein_coding") %>% 
-  rename(te = log2FoldChange) %>% 
-  select(-gene_id, -gene_type, -sample1, -sample2) %>% 
-  gather(qty, value, matches("te|count1|count2")) %>% 
-  unite(qty, sample, qty) %>% 
-  # get rid of second copy of genes present in both x and y
-  group_by(qty, gene_name) %>% 
-  slice(1) %>% 
-  ungroup() %>% 
-  spread(qty, value) %>%
-  # include only genes with > threshold counts across these subst conditions
-  filter(rowSums(select(., matches("count(1|2)$"))) > count_threshold_for_deseq2) %>% 
-  arrange(desc(vir_te - untr_te)) %>%
-  write_tsv("../tables/virus_treatment_te_change.tsv") %>% 
-  print()
-```
-
-## Genes with largest TE difference between interferon + virus and untreated conditions
-```{r}
-lfc %>% 
-  filter(str_detect(sample1, "cyclo_(ifn_vir|untr)$") & 
-           str_detect(sample2, "mrna_(ifn_vir|untr)$")) %>% 
-  mutate(sample = str_extract(sample1, "(?<=(mrna|cyclo|ltm)_).+")) %>% 
-  left_join(gene_annotations %>% select(gene_id, gene_name, gene_type)) %>% 
-  filter(gene_type == "protein_coding") %>% 
-  rename(te = log2FoldChange) %>% 
-  select(-gene_id, -gene_type, -sample1, -sample2) %>% 
-  gather(qty, value, matches("te|count1|count2")) %>% 
-  unite(qty, sample, qty) %>% 
-  # get rid of second copy of genes present in both x and y
-  group_by(qty, gene_name) %>% 
-  slice(1) %>% 
-  ungroup() %>% 
-  spread(qty, value) %>%
-  # include only genes with > threshold counts across these subst conditions
-  filter(rowSums(select(., matches("count(1|2)$"))) > count_threshold_for_deseq2) %>% 
-  arrange(desc(ifn_vir_te - untr_te)) %>%
-  write_tsv("../tables/interferon_plus_virus_treatment_te_change.tsv") %>% 
   print()
 ```
